login page color changed

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,14 @@
   border-radius: 100%;
 }
 
+html,body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+}
+
 /* .MuiCardContent-root{
   overflow: auto;
 } */
