student subject assign with session

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,6 @@ html,body{
 }
 
 /* Handle on hover */
-.table_scroll::-webkit-scrollbar-thumb:hover {
+/* .table_scroll::-webkit-scrollbar-thumb:hover {
   background: #009eb3; 
-}
+} */
